--- a/package.json
+++ b/package.json
@@ -3,21 +3,30 @@
   "version": "0.1.0",
   "author": "The WebMatrix Team <webmatrix@microsoft.com>",
   "description": "A simple boilerplate for building node applications on Windows Azure (or wherever)",
-  "contributors": [ 
+  "contributors": [
     {
       "name": "Justin Beckwith",
       "email": "justbe@microsoft.com"
-    } 
-  ],  
-  "main": "./server.js",  
+    }
+  ],
+  "main": "./server.js",
   "keywords": [
     "azure",
     "boilerplate",
     "express"
   ],
-  "dependencies" : {
-    "express": "2.5.7",
-    "jade": ">= 0.0.1"
+  "dependencies": {
+    "body-parser": "^1.12.3",
+    "connect": "^3.3.5",
+    "cordova": "^5.0.0",
+    "errorhandler": "^1.3.5",
+    "express": "4.12.3",
+    "jade": ">= 0.0.1",
+    "method-override": "^2.3.2",
+    "mongojs": "^0.18.2",
+    "multer": "^0.1.8",
+    "node-uuid": "^1.4.3",
+    "socket.io": "^1.3.5"
   },
   "noAnalyze": true,
   "license": "Apache",
