only backup files if different

--- a/configuration/Makefile
+++ b/configuration/Makefile
@@ -7,17 +7,17 @@ TIMESTAMP := $(shell date +%Y%m%d%H%M%S)
 export
 install: /etc/rc2.d/S01$(BACKEND) $(SITE_ACTIVE) startup_service restart_nginx
 /etc/init.d/%: %
-	[ -e "$@" ] && sudo mv $@ $@.$(TIMESTAMP)
-	sudo cp $< $@
+	[ -e "$@" ] && diff -q $< $@ && sudo mv $@ $@.$(TIMESTAMP) || true
+	[ -e "$@" ] || sudo cp $< $@
 /etc/rc2.d/S01%: /etc/init.d/%
 	sudo update-rc.d $* enable
 startup_service: /etc/init.d/$(BACKEND)
 	sudo $< start
 $(SITE_ACTIVE): $(SITE_CONFIG)
-	cd $(dir $@) && sudo ln -s ../sites-available/$(notdir $<) .
+	cd $(dir $@) && sudo ln -sf ../sites-available/$(notdir $<) .
 $(SITE_CONFIG): myturn.nginx
-	[ -e "$@" ] && sudo mv $@ $@.$(TIMESTAMP)
-	sudo cp $< $@
+	[ -e "$@" ] && diff -q $< $@ && sudo mv $@ $@.$(TIMESTAMP) || true
+	[ -e "$@" ] || sudo cp $< $@
 restart_nginx: /etc/init.d/nginx
 	sudo $< restart
 diff:
