--- a/configuration/Makefile
+++ b/configuration/Makefile
@@ -7,7 +7,7 @@ TIMESTAMP := $(shell date +%Y%m%d%H%M%S)
 export
 install: /etc/rc2.d/S01$(BACKEND) $(SITE_ACTIVE) startup_service restart_nginx
 /etc/init.d/%: %
-	[ -e "$@" ] && diff -q $< $@ && sudo mv $@ $@.$(TIMESTAMP) || true
+	[ -e "$@" ] && diff -q $< $@ || sudo mv $@ $@.$(TIMESTAMP)
 	[ -e "$@" ] || sudo cp $< $@
 /etc/rc2.d/S01%: /etc/init.d/%
 	sudo update-rc.d $* enable
@@ -16,7 +16,7 @@ startup_service: /etc/init.d/$(BACKEND)
 $(SITE_ACTIVE): $(SITE_CONFIG)
 	cd $(dir $@) && sudo ln -sf ../sites-available/$(notdir $<) .
 $(SITE_CONFIG): myturn.nginx
-	[ -e "$@" ] && diff -q $< $@ && sudo mv $@ $@.$(TIMESTAMP) || true
+	[ -e "$@" ] && diff -q $< $@ || sudo mv $@ $@.$(TIMESTAMP)
 	[ -e "$@" ] || sudo cp $< $@
 restart_nginx: /etc/init.d/nginx
 	sudo $< restart
