--- a/configuration/Makefile
+++ b/configuration/Makefile
@@ -1,11 +1,15 @@
 SERVICE := myturn
 BACKEND := node-$(SERVICE)-api
 NGINX_CONFIG := /etc/nginx
+SITE_ROOT := /var/www/myapp
 SITE_CONFIG := $(NGINX_CONFIG)/sites-available/$(SERVICE)
 SITE_ACTIVE := $(NGINX_CONFIG)/sites-enabled/$(SERVICE)
 TIMESTAMP := $(shell date +%Y%m%d%H%M%S)
+DRYRUN ?= --dry-run  # for rsync
 export
 install: /etc/rc2.d/S01$(BACKEND) $(SITE_ACTIVE) startup_service restart_nginx
+siteinstall: ~/src/myturnb | $(SITE_ROOT)
+	rsync -avuz $(DRYRUN) --exclude=configuration $</ $(SITE_ROOT)/
 /etc/init.d/%: %
 	[ -e "$@" ] && diff -q $< $@ || sudo mv $@ $@.$(TIMESTAMP)
 	[ -e "$@" ] || sudo cp $< $@
@@ -13,6 +17,8 @@ install: /etc/rc2.d/S01$(BACKEND) $(SITE_ACTIVE) startup_service restart_nginx
 	sudo update-rc.d $* enable
 startup_service: /etc/init.d/$(BACKEND)
 	sudo $< start
+$(SITE_ROOT):
+	sudo mkdir -p $@
 $(SITE_ACTIVE): $(SITE_CONFIG)
 	cd $(dir $@) && sudo ln -sf ../sites-available/$(notdir $<) .
 $(SITE_CONFIG): myturn.nginx
