--- a/package.json
+++ b/package.json
@@ -1,23 +1,29 @@
 {
-  "name": "WebMatrixExpressSite",
+  "name": "MyTurn",
   "version": "0.1.0",
-  "author": "The WebMatrix Team <webmatrix@microsoft.com>",
-  "description": "A simple boilerplate for building node applications on Windows Azure (or wherever)",
+  "author": "David Stodolsky",
+  "description": "A meeting facilitation application",
   "contributors": [ 
     {
-      "name": "Justin Beckwith",
-      "email": "justbe@microsoft.com"
+      "name": "David Stodolsky",
+      "email": "dss@secureid.net"
     } 
   ],  
-  "main": "./server.js",  
+  "main": "./api.js",  
   "keywords": [
-    "azure",
-    "boilerplate",
-    "express"
+    "myturn",
+    "meeting",
+    "meetings",
+    "promote",
+    "protect",
+    "perform"
   ],
   "dependencies" : {
     "express": "2.5.7",
-    "jade": ">= 0.0.1"
+    "jade": "0.22.0",
+    "mongojs": "0.4.3",
+    "node-uuid": "1.3.3",
+    "socket.io": "0.9.16"
   },
   "noAnalyze": true,
   "license": "Apache",
