standardized to lowercase from CamelCase

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "MyTurn",
+  "name": "myturn",
   "version": "0.1.0",
   "author": "David Stodolsky",
   "description": "A meeting facilitation application",
