--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
   "license": "Apache",
   "engines": {
     "node": ">=0.6.14"
+  },
+  "scripts": {
+    "install": "cd configuration && make siteinstall install"
   }
 }
