got rid of specified location

--- a/configuration/Makefile
+++ b/configuration/Makefile
@@ -8,8 +8,8 @@ TIMESTAMP := $(shell date +%Y%m%d%H%M%S)
 DRYRUN ?= --dry-run  # for rsync
 export
 install: /etc/rc2.d/S01$(BACKEND) $(SITE_ACTIVE) startup_service restart_nginx
-siteinstall: ~/src/myturnb | $(SITE_ROOT)
-	cd $< && sudo rsync -avcz $(DRYRUN) \
+siteinstall: | $(SITE_ROOT)
+	cd .. && sudo rsync -avcz $(DRYRUN) \
 	 --exclude=configuration --exclude='.git*' \
 	 . $(SITE_ROOT)/
 /etc/init.d/%: %
