--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "jade": "0.22.0",
     "mongojs": "0.4.3",
     "node-uuid": "1.3.3",
-    "socket.io": "0.9.16"
+    "socket.io": "0.9.16",
+    "forever": "0.15.3"
   },
   "noAnalyze": true,
   "license": "Apache",
