added --delete to siteinstall to remove need for rm -rf /var/www/myturn

--- a/configuration/Makefile
+++ b/configuration/Makefile
@@ -6,10 +6,11 @@ SITE_CONFIG := $(NGINX_CONFIG)/sites-available/$(SERVICE)
 SITE_ACTIVE := $(NGINX_CONFIG)/sites-enabled/$(SERVICE)
 TIMESTAMP := $(shell date +%Y%m%d%H%M%S)
 DRYRUN ?= --dry-run  # for rsync
+DELETE ?= --delete
 export
 install: /etc/rc2.d/S01$(BACKEND) $(SITE_ACTIVE) startup_service restart_nginx
 siteinstall: | $(SITE_ROOT)
-	cd .. && sudo rsync -avcz $(DRYRUN) \
+	cd .. && sudo rsync -avcz $(DRYRUN) $(DELETE) \
 	 --exclude=configuration --exclude='.git*' \
 	 . $(SITE_ROOT)/
 /etc/init.d/%: %
