--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
     "jade": "0.22.0",
     "mongojs": "0.4.3",
     "node-uuid": "1.3.3",
-    "socket.io": "0.9.16",
-    "forever": "0.15.3"
+    "socket.io": "0.9.16"
   },
   "noAnalyze": true,
   "license": "Apache-1.1",
@@ -43,6 +42,7 @@
     "node": ">=0.6.14"
   },
   "scripts": {
+    "preinstall": "sudo npm install -g forever",
     "install": "make install"
   }
 }
