adding `env` to `install` rule so we can see what npm adds to environment that we can possibly use

--- a/configuration/Makefile
+++ b/configuration/Makefile
@@ -8,6 +8,8 @@ TIMESTAMP := $(shell date +%Y%m%d%H%M%S)
 DRYRUN ?= --dry-run  # for rsync
 DELETE ?= --delete
 export
+env:
+	$@
 install: /etc/rc2.d/S01$(BACKEND) $(SITE_ACTIVE) startup_service restart_nginx
 siteinstall: | $(SITE_ROOT)
 	cd .. && sudo rsync -avcz $(DRYRUN) $(DELETE) \
