--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "node": ">=0.6.14"
   },
   "scripts": {
-    "preinstall": "sudo npm update -g forever",
+    "preinstall": "npm update -g forever",
     "install": "make install"
   }
 }
