it was never actually starting

--- a/configuration/myturn@.service
+++ b/configuration/myturn@.service
@@ -5,7 +5,7 @@ After=network.target
 [Service]
 WorkingDirectory=/var/www/%p-%i
 Environment=SERVER_PORT=3000
-ExecStart=/usr/bin/logger %p-%i starting; node api.js --local
+ExecStart=node api.js --local
 Restart=on-failure
 SyslogIdentifier=%p-%i
 
