--- a/configuration/Makefile
+++ b/configuration/Makefile
@@ -51,8 +51,10 @@ $(SITE_ACTIVE): $(SITE_CONFIG)
 	 $@
 ifeq (release,$(BRANCH))
 	# remove old `myturn` configuration if it exists
+	@echo WARNING: Removing old myturn configuration >&2
 	rm -f /etc/nginx/sites-enabled/myturn
 	# make new default a redirect to the release
+	@echo WARNING: Redirecting default to release.myturn.mobi >&2
 	cp -f default.nginx /etc/nginx/sites-available/myturn-default
 	cd /etc/nginx/sites-enabled && \
 	 ln -s ../sites-available/myturn-default .
